exports[`Sync Basic Assertion Error Snapshots > \"{arraylike} 'to be empty'\" [arraylike-to-be-empty-2s2p] > should throw a consistent AssertionError [arraylike-to-be-empty-2s2p] <snapshot> 1`] = `
{
  "message": "Expected array-like to have length 0, but had length 3\\n- expected  - 1\\n+ actual    + 1\\n\\n- 0\\n+ 3",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": 3,
  "expected": 0,
  "diff": "simple",
  "assertionId": "arraylike-to-be-empty-2s2p"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{record} 'to be empty'\" [record-to-be-empty-2s2p] > should throw a consistent AssertionError [record-to-be-empty-2s2p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{record} 'to be empty'\\" failed:\\nCompared values have no visual difference.",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": {
    "foo": "bar"
  },
  "expected": {
    "foo": "bar"
  },
  "diff": "simple",
  "assertionId": "record-to-be-empty-2s2p"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{string} 'to be empty'\" [string-to-be-empty-2s2p] > should throw a consistent AssertionError [string-to-be-empty-2s2p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{string} 'to be empty'\\" failed:\\n- expected  - 0\\n+ actual    + 1\\n\\n+ hello",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": "hello",
  "expected": "",
  "diff": "simple",
  "assertionId": "string-to-be-empty-2s2p"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{string} 'to be non-empty'\" [string-to-be-non_empty-2s2p] > should throw a consistent AssertionError [string-to-be-non_empty-2s2p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{string} 'to be non-empty'\\" failed:\\n- expected  - 1\\n+ actual    + 0\\n\\n- x",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": "",
  "expected": "x",
  "diff": "simple",
  "assertionId": "string-to-be-non_empty-2s2p"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be -Infinity'\" [unknown-to-be-_infinity-2s1p] > should throw a consistent AssertionError [unknown-to-be-_infinity-2s1p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{unknown} 'to be -Infinity'\\" failed:\\n- expected  - 1\\n+ actual    + 1\\n\\n- -Infinity\\n+ Infinity",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": null,
  "expected": null,
  "diff": "simple",
  "assertionId": "unknown-to-be-_infinity-2s1p"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be Infinity'\" [unknown-to-be-infinity-2s1p] > should throw a consistent AssertionError [unknown-to-be-infinity-2s1p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{unknown} 'to be Infinity'\\" failed:\\n- expected  - 1\\n+ actual    + 1\\n\\n- Infinity\\n+ -Infinity",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": null,
  "expected": null,
  "diff": "simple",
  "assertionId": "unknown-to-be-infinity-2s1p"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be NaN'\" [unknown-to-be-nan-2s1p] > should throw a consistent AssertionError [unknown-to-be-nan-2s1p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{unknown} 'to be NaN'\\" failed:\\n  Comparing two different types of values. Expected string but received number.",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": 42,
  "expected": "<nan>",
  "diff": "simple",
  "assertionId": "unknown-to-be-nan-2s1p"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be a RegExp' / 'to be a regex' / 'to be a regexp'\" [unknown-to-be-a-regexp-to-be-a-regex-to-be-a-regexp-2s1p] > should throw a consistent AssertionError [unknown-to-be-a-regexp-to-be-a-regex-to-be-a-regexp-2s1p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{unknown} 'to be a RegExp' / 'to be a regex' / 'to be a regexp'\\" failed:\\nInput not instance of RegExp",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": "hello",
  "diff": "simple",
  "assertionId": "unknown-to-be-a-regexp-to-be-a-regex-to-be-a-regexp-2s1p"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be a Set'\" [unknown-to-be-a-set-2s1p] > should throw a consistent AssertionError [unknown-to-be-a-set-2s1p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{unknown} 'to be a Set'\\" failed:\\nInput not instance of Set",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": "hello",
  "diff": "simple",
  "assertionId": "unknown-to-be-a-set-2s1p"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be a WeakMap'\" [unknown-to-be-a-weakmap-2s1p] > should throw a consistent AssertionError [unknown-to-be-a-weakmap-2s1p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{unknown} 'to be a WeakMap'\\" failed:\\nInput not instance of WeakMap",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": "hello",
  "diff": "simple",
  "assertionId": "unknown-to-be-a-weakmap-2s1p"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be a WeakSet'\" [unknown-to-be-a-weakset-2s1p] > should throw a consistent AssertionError [unknown-to-be-a-weakset-2s1p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{unknown} 'to be a WeakSet'\\" failed:\\nInput not instance of WeakSet",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": "hello",
  "diff": "simple",
  "assertionId": "unknown-to-be-a-weakset-2s1p"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be a bigint' / 'to be a BigInt'\" [unknown-to-be-a-bigint-to-be-a-bigint-2s1p] > should throw a consistent AssertionError [unknown-to-be-a-bigint-to-be-a-bigint-2s1p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{unknown} 'to be a bigint' / 'to be a BigInt'\\" failed:\\n  Comparing two different types of values. Expected string but received number.",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": 42,
  "expected": "<bigint>",
  "diff": "simple",
  "assertionId": "unknown-to-be-a-bigint-to-be-a-bigint-2s1p"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be a boolean' / 'to be boolean' / 'to be a bool'\" [unknown-to-be-a-boolean-to-be-boolean-to-be-a-bool-2s1p] > should throw a consistent AssertionError [unknown-to-be-a-boolean-to-be-boolean-to-be-a-bool-2s1p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{unknown} 'to be a boolean' / 'to be boolean' / 'to be a bool'\\" failed:\\n  Comparing two different types of values. Expected boolean but received string.",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": "hello",
  "expected": true,
  "diff": "simple",
  "assertionId": "unknown-to-be-a-boolean-to-be-boolean-to-be-a-bool-2s1p"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be a class' / 'to be a constructor' / 'to be constructible'\" [unknown-to-be-a-class-to-be-a-constructor-to-be-constructible-2s1p] > should throw a consistent AssertionError [unknown-to-be-a-class-to-be-a-constructor-to-be-constructible-2s1p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{unknown} 'to be a class' / 'to be a constructor' / 'to be constructible'\\" failed:\\nInvalid input",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": "hello",
  "diff": "simple",
  "assertionId": "unknown-to-be-a-class-to-be-a-constructor-to-be-constructible-2s1p"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be a date' / 'to be a Date'\" [unknown-to-be-a-date-to-be-a-date-2s1p] > should throw a consistent AssertionError [unknown-to-be-a-date-to-be-a-date-2s1p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{unknown} 'to be a date' / 'to be a Date'\\" failed:\\n- expected  - 1\\n+ actual    + 1\\n\\n- <date>\\n+ hello",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": "hello",
  "expected": "<date>",
  "diff": "simple",
  "assertionId": "unknown-to-be-a-date-to-be-a-date-2s1p"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be a function'\" [unknown-to-be-a-function-2s1p] > should throw a consistent AssertionError [unknown-to-be-a-function-2s1p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{unknown} 'to be a function'\\" failed:\\nInvalid input",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": "hello",
  "diff": "simple",
  "assertionId": "unknown-to-be-a-function-2s1p"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be a negative integer' / 'to be a negative int'\" [unknown-to-be-a-negative-integer-to-be-a-negative-int-2s1p] > should throw a consistent AssertionError [unknown-to-be-a-negative-integer-to-be-a-negative-int-2s1p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{unknown} 'to be a negative integer' / 'to be a negative int'\\" failed:\\n- expected  - 1\\n+ actual    + 1\\n\\n- 0\\n+ 5",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": 5,
  "expected": 0,
  "diff": "simple",
  "assertionId": "unknown-to-be-a-negative-integer-to-be-a-negative-int-2s1p"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be a number' / 'to be finite'\" [unknown-to-be-a-number-to-be-finite-2s1p] > should throw a consistent AssertionError [unknown-to-be-a-number-to-be-finite-2s1p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{unknown} 'to be a number' / 'to be finite'\\" failed:\\n  Comparing two different types of values. Expected number but received string.",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": "hello",
  "expected": 0,
  "diff": "simple",
  "assertionId": "unknown-to-be-a-number-to-be-finite-2s1p"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be a positive integer' / 'to be a positive int'\" [unknown-to-be-a-positive-integer-to-be-a-positive-int-2s1p] > should throw a consistent AssertionError [unknown-to-be-a-positive-integer-to-be-a-positive-int-2s1p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{unknown} 'to be a positive integer' / 'to be a positive int'\\" failed:\\n- expected  - 1\\n+ actual    + 1\\n\\n- 0\\n+ -5",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": -5,
  "expected": 0,
  "diff": "simple",
  "assertionId": "unknown-to-be-a-positive-integer-to-be-a-positive-int-2s1p"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be a primitive'\" [unknown-to-be-a-primitive-2s1p] > should throw a consistent AssertionError [unknown-to-be-a-primitive-2s1p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{unknown} 'to be a primitive'\\" failed:\\nInvalid input",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": {},
  "diff": "simple",
  "assertionId": "unknown-to-be-a-primitive-2s1p"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be a record' / 'to be a plain object'\" [unknown-to-be-a-record-to-be-a-plain-object-2s1p] > should throw a consistent AssertionError [unknown-to-be-a-record-to-be-a-plain-object-2s1p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{unknown} 'to be a record' / 'to be a plain object'\\" failed:\\n  Comparing two different types of values. Expected string but received array.",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": [],
  "expected": "<record>",
  "diff": "simple",
  "assertionId": "unknown-to-be-a-record-to-be-a-plain-object-2s1p"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be a string'\" [unknown-to-be-a-string-2s1p] > should throw a consistent AssertionError [unknown-to-be-a-string-2s1p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{unknown} 'to be a string'\\" failed:\\n  Comparing two different types of values. Expected string but received number.",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": 42,
  "expected": "42",
  "diff": "simple",
  "assertionId": "unknown-to-be-a-string-2s1p"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be a symbol' / 'to be a Symbol'\" [unknown-to-be-a-symbol-to-be-a-symbol-2s1p] > should throw a consistent AssertionError [unknown-to-be-a-symbol-to-be-a-symbol-2s1p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{unknown} 'to be a symbol' / 'to be a Symbol'\\" failed:\\n- expected  - 1\\n+ actual    + 1\\n\\n- <symbol>\\n+ hello",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": "hello",
  "expected": "<symbol>",
  "diff": "simple",
  "assertionId": "unknown-to-be-a-symbol-to-be-a-symbol-2s1p"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be an Error' / 'to be a Error'\" [unknown-to-be-an-error-to-be-a-error-2s1p] > should throw a consistent AssertionError [unknown-to-be-an-error-to-be-a-error-2s1p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{unknown} 'to be an Error' / 'to be a Error'\\" failed:\\nInput not instance of Error",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": "hello",
  "diff": "simple",
  "assertionId": "unknown-to-be-an-error-to-be-a-error-2s1p"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be an array' / 'to be array'\" [unknown-to-be-an-array-to-be-array-2s1p] > should throw a consistent AssertionError [unknown-to-be-an-array-to-be-array-2s1p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{unknown} 'to be an array' / 'to be array'\\" failed:\\n  Comparing two different types of values. Expected array but received number.",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": 42,
  "expected": [],
  "diff": "simple",
  "assertionId": "unknown-to-be-an-array-to-be-array-2s1p"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be an async function'\" [unknown-to-be-an-async-function-2s1p] > should throw a consistent AssertionError [unknown-to-be-an-async-function-2s1p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{unknown} 'to be an async function'\\" failed:\\nInvalid input",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "diff": "simple",
  "assertionId": "unknown-to-be-an-async-function-2s1p"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be an integer' / 'to be a safe integer' / 'to be an int' / 'to be a safe int'\" [unknown-to-be-an-integer-to-be-a-safe-integer-to-be-an-int-to-be-a-safe-int-2s1p] > should throw a consistent AssertionError [unknown-to-be-an-integer-to-be-a-safe-integer-to-be-an-int-to-be-a-safe-int-2s1p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{unknown} 'to be an integer' / 'to be a safe integer' / 'to be an int' / 'to be a safe int'\\" failed:\\n  Comparing two different types of values. Expected string but received number.",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": 3.14,
  "expected": "<int>",
  "diff": "simple",
  "assertionId": "unknown-to-be-an-integer-to-be-a-safe-integer-to-be-an-int-to-be-a-safe-int-2s1p"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be an object'\" [unknown-to-be-an-object-2s1p] > should throw a consistent AssertionError [unknown-to-be-an-object-2s1p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{unknown} 'to be an object'\\" failed:\\nInvalid input",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": "hello",
  "diff": "simple",
  "assertionId": "unknown-to-be-an-object-2s1p"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be defined'\" [unknown-to-be-defined-2s1p] > should throw a consistent AssertionError [unknown-to-be-defined-2s1p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{unknown} 'to be defined'\\" failed:\\nInvalid input: expected nonoptional, received undefined",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "diff": "simple",
  "assertionId": "unknown-to-be-defined-2s1p"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be false'\" [unknown-to-be-false-2s1p] > should throw a consistent AssertionError [unknown-to-be-false-2s1p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{unknown} 'to be false'\\" failed:\\n- expected  - 1\\n+ actual    + 1\\n\\n- false\\n+ true",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": true,
  "expected": false,
  "diff": "simple",
  "assertionId": "unknown-to-be-false-2s1p"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be falsy'\" [unknown-to-be-falsy-2s1p] > should throw a consistent AssertionError [unknown-to-be-falsy-2s1p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{unknown} 'to be falsy'\\" failed:\\nInvalid input",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": 1,
  "diff": "simple",
  "assertionId": "unknown-to-be-falsy-2s1p"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be infinite'\" [unknown-to-be-infinite-2s1p] > should throw a consistent AssertionError [unknown-to-be-infinite-2s1p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{unknown} 'to be infinite'\\" failed:\\nInvalid input",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": 42,
  "diff": "simple",
  "assertionId": "unknown-to-be-infinite-2s1p"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be negative' / 'to be a negative number'\" [unknown-to-be-negative-to-be-a-negative-number-2s1p] > should throw a consistent AssertionError [unknown-to-be-negative-to-be-a-negative-number-2s1p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{unknown} 'to be negative' / 'to be a negative number'\\" failed:\\n- expected  - 1\\n+ actual    + 1\\n\\n- 0\\n+ 5",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": 5,
  "expected": 0,
  "diff": "simple",
  "assertionId": "unknown-to-be-negative-to-be-a-negative-number-2s1p"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be null'\" [unknown-to-be-null-2s1p] > should throw a consistent AssertionError [unknown-to-be-null-2s1p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{unknown} 'to be null'\\" failed:\\nInvalid input: expected null, received undefined",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "diff": "simple",
  "assertionId": "unknown-to-be-null-2s1p"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be positive' / 'to be a positive number'\" [unknown-to-be-positive-to-be-a-positive-number-2s1p] > should throw a consistent AssertionError [unknown-to-be-positive-to-be-a-positive-number-2s1p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{unknown} 'to be positive' / 'to be a positive number'\\" failed:\\n- expected  - 1\\n+ actual    + 1\\n\\n- 0\\n+ -5",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": -5,
  "expected": 0,
  "diff": "simple",
  "assertionId": "unknown-to-be-positive-to-be-a-positive-number-2s1p"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be true'\" [unknown-to-be-true-2s1p] > should throw a consistent AssertionError [unknown-to-be-true-2s1p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{unknown} 'to be true'\\" failed:\\n- expected  - 1\\n+ actual    + 1\\n\\n- true\\n+ false",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": false,
  "expected": true,
  "diff": "simple",
  "assertionId": "unknown-to-be-true-2s1p"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be truthy' / 'to exist' / 'to be ok'\" [unknown-to-be-truthy-to-exist-to-be-ok-2s1p] > should throw a consistent AssertionError [unknown-to-be-truthy-to-exist-to-be-ok-2s1p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{unknown} 'to be truthy' / 'to exist' / 'to be ok'\\" failed:\\nInvalid input",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": 0,
  "diff": "simple",
  "assertionId": "unknown-to-be-truthy-to-exist-to-be-ok-2s1p"
}
`;

exports[`Sync Basic Assertion Error Snapshots > \"{unknown} 'to be undefined'\" [unknown-to-be-undefined-2s1p] > should throw a consistent AssertionError [unknown-to-be-undefined-2s1p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{unknown} 'to be undefined'\\" failed:\\nInvalid input: expected undefined, received null",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": null,
  "diff": "simple",
  "assertionId": "unknown-to-be-undefined-2s1p"
}
`;
